# ocaml-catnip

./: .merlin  Makefile  README.md  catnip.install  catnip.opam
examples/: .merlin  free_api.ml  jbuild
src/: .merlin  applicative.ml  bifunctor.ml  category.ml  coproduct.ml  functor.ml  instances.ml  jbuild  monad.ml  monoid.ml  prelude.ml
